{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 60,
  "lineage": "edb67a0b-f33e-0e02-65aa-258d3525ae13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "group-project-3-nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c88ef3feee73a27",
            "domain": "vpc",
            "id": "eipalloc-03c88ef3feee73a27",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-169-122.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.169.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "group-project-3-nat_eip terraform"
            },
            "tags_all": {
              "Name": "group-project-3-nat_eip terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_vpc.project_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group-project-3-main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:internet-gateway/igw-0ba3bf24fb1ed9d29",
            "id": "igw-0ba3bf24fb1ed9d29",
            "owner_id": "452187250204",
            "tags": {
              "Name": "group-project-3-main_igw terraform"
            },
            "tags_all": {
              "Name": "group-project-3-main_igw terraform"
            },
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "dependencies": [
            "aws_vpc.project_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "group-project-3-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c88ef3feee73a27",
            "connectivity_type": "public",
            "id": "nat-0f33d0a95ba17ee1b",
            "network_interface_id": "eni-0fec648b7da0ac0bf",
            "private_ip": "10.0.1.189",
            "public_ip": "3.139.169.122",
            "subnet_id": "subnet-0a58d8d4a185e3eba",
            "tags": {
              "Name": "group-project-3-nat terraform"
            },
            "tags_all": {
              "Name": "group-project-3-nat terraform"
            }
          },
          "dependencies": [
            "aws_eip.group-project-3-nat_eip",
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_subnet.public",
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:route-table/rtb-024aa07834c0a83ee",
            "id": "rtb-024aa07834c0a83ee",
            "owner_id": "452187250204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f33d0a95ba17ee1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "group-project-3-private_route_table terraform"
            },
            "tags_all": {
              "Name": "group-project-3-private_route_table terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.group-project-3-nat_eip",
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_nat_gateway.group-project-3-nat",
            "aws_subnet.public",
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:route-table/rtb-064198ccca44a1c1c",
            "id": "rtb-064198ccca44a1c1c",
            "owner_id": "452187250204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba3bf24fb1ed9d29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "group-project-3-public_route_table terraform"
            },
            "tags_all": {
              "Name": "group-project-3-public_route_table terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_vpc.project_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ebabad27a28ac60",
            "route_table_id": "rtb-024aa07834c0a83ee",
            "subnet_id": "subnet-0149e499d9ca89aba"
          },
          "dependencies": [
            "aws_eip.group-project-3-nat_eip",
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_nat_gateway.group-project-3-nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079c7666a7628b4bd",
            "route_table_id": "rtb-064198ccca44a1c1c",
            "subnet_id": "subnet-0a58d8d4a185e3eba"
          },
          "dependencies": [
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0e79da5fd79ad11",
            "route_table_id": "rtb-064198ccca44a1c1c",
            "subnet_id": "subnet-073476fac89f9e376"
          },
          "dependencies": [
            "aws_internet_gateway.group-project-3-main_igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:security-group/sg-0cdcee9e3d6beb06c",
            "description": "DB security group for RDS and SSH traffic over ports 3306 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdcee9e3d6beb06c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_security_group",
            "name_prefix": "",
            "owner_id": "452187250204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB Security Group terraform",
              "security_group": "rds_sg"
            },
            "tags_all": {
              "Name": "DB Security Group terraform",
              "security_group": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:subnet/subnet-0149e499d9ca89aba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0149e499d9ca89aba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452187250204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-project-3-private_subnet terraform"
            },
            "tags_all": {
              "Name": "group-project-3-private_subnet terraform"
            },
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "dependencies": [
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:subnet/subnet-0a58d8d4a185e3eba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a58d8d4a185e3eba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452187250204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-project-3-public_subnet terraform"
            },
            "tags_all": {
              "Name": "group-project-3-public_subnet terraform"
            },
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "dependencies": [
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:subnet/subnet-073476fac89f9e376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073476fac89f9e376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452187250204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "group-project-3-public2_subnet terraform"
            },
            "tags_all": {
              "Name": "group-project-3-public2_subnet terraform"
            },
            "vpc_id": "vpc-0f8e5856c14b0691c"
          },
          "dependencies": [
            "aws_vpc.project_3_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452187250204:vpc/vpc-0f8e5856c14b0691c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a20ac07ef1d500ad",
            "default_route_table_id": "rtb-066f20ba946488376",
            "default_security_group_id": "sg-075c7e126d7397044",
            "dhcp_options_id": "dopt-0711c6cd67dd30c53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8e5856c14b0691c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066f20ba946488376",
            "owner_id": "452187250204",
            "tags": {
              "Name": "group-project-3-vpc terraform"
            },
            "tags_all": {
              "Name": "group-project-3-vpc terraform"
            }
          }
        }
      ]
    }
  ]
}